# music_player

./: README.md  pyproject.toml  requirements.txt  setup.py
src/: __init__.py  main.py
src/ui/: __init__.py  app_ui.py
